--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get_storage: ^2.1.1
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
+  http: ^1.2.0
   rive: ^0.12.4
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
