--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^2.25.1
   flutter:
     sdk: flutter
+  flutter_multi_formatter: ^2.12.4
   flutter_svg: ^2.0.9
   get: ^4.6.6
   get_storage: ^2.1.1
