--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   http: ^1.2.0
+  intl: ^0.19.0
   rive: ^0.12.4
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
