--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,19 +16,20 @@ dependencies:
   flutter_svg: ^2.0.9
   get: ^4.6.6
   get_storage: ^2.1.1
-  google_fonts: ^6.1.0
+  google_fonts: ^4.0.2
   google_sign_in: ^6.2.1
   http: ^1.2.0
-  intl: ^0.19.0
-  rive: ^0.12.4
+  intl: ^0.18.1
+  rive: ^0.13.4
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
-  sizer: ^2.0.15
+  sizer: ^3.0.4
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
